--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <a href="https://steamcommunity.com/id/vvfk/" target="_blank" class="social-icon">
             <i class="fab fa-steam"></i>
         </a>
-        <a href="https://github.com/Act342" target="_blank" class="social-icon">
+        <a href="https://github.com/fuckact" target="_blank" class="social-icon">
             <i class="fab fa-github"></i>
         </a>
     </div>
