--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title></title>
-    <meta property="og:title" content="Your Name's Links" />
-    <meta property="og:site_name" content="yourdomain.com" />
-    <meta property="og:description" content="A list of Your Name's most important links." />
+    <meta property="og:title" content="fuckact" />
+    <meta property="og:site_name" content="act342.github.io/links" />
+    <meta property="og:description" content="fuckact" />
     <!-- Add Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
