--- a/index.html
+++ b/index.html
@@ -1,79 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="UTF-8">
-    <title></title>
-    <meta property="og:title" content="fuckact" />
-    <meta property="og:site_name" content="act342.github.io/links" />
-    <meta property="og:description" content="fuckact" />
-    <!-- Add Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <meta name="theme-color" content="var(--bgColor)">
-    <style>
-        /* Custom Cursor CSS */
-        body {
-            cursor: url('images/cur.png'), auto; /* Custom cursor image */
-        }
-
-        /* Style for the cursor trail */
-        .cursor-trail {
-    position: absolute;
-    width: 8px;   /* Smaller size for the trail */
-    height: 8px;  /* Smaller size for the trail */
-    background-color: rgb(0, 238, 255);  /* Trail color */
-    border-radius: 50%;
-    pointer-events: none;  /* Prevents interference with other elements */
-    animation: trailAnimation 0.5s ease-out forwards;
-}
-
-        /* Animation for the trail */
-        @keyframes trailAnimation {
-            from {
-                transform: scale(1);
-                opacity: 1;
-            }
-            to {
-                transform: scale(0);
-                opacity: 0;
-            }
-        }
-    </style>
-</head>
-<body>
-    <!-- Background Video -->
-    <div class="background-video-container">
-        <video autoplay loop muted id="background-video">
-            <source src="assets/vid.mp4" type="video/mp4">
-        </video>
-    </div>
-
-    <!-- Page Content Below -->
-    <img id="userPhoto" class="animated rubberBand fast" src="images/profile-picture.webp" alt="act">
-    <h1 class="animated jello">act</h1>
-
-    <!-- Social Media Links with Icons -->
-    <div id="social-media-links" class="animated fadeInLeft delay-1s">
-        <a href="https://steamcommunity.com/id/vvfk/" target="_blank" class="social-icon">
-            <i class="fab fa-steam"></i>
-        </a>
-        <a href="https://github.com/fuckact" target="_blank" class="social-icon">
-            <i class="fab fa-github"></i>
-        </a>
-    </div>
-
-    <!-- Optional Attribution Repo Link -->
-    <a class="atrib">Built by Act 💸</a>
-
-    <!-- Background Audio -->
-    <audio id="background-audio" autoplay loop muted>
-        <source src="assets/aud.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
-    </audio>
-
-    <script>
-        window.onload = function() {
+<!doctypehtml><html lang=en><meta content="width=device-width,initial-scale=1"name=viewport><meta charset=UTF-8><title></title><meta content="Your Name's Links"property=og:title><meta content=yourdomain.com property=og:site_name><meta content="A list of Your Name's most important links."property=og:description><link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css rel=stylesheet><link href=css/style.css rel=stylesheet><meta content=var(--bgColor) name=theme-color><style>body{cursor:url(images/cur.png),auto}.cursor-trail{position:absolute;width:8px;height:8px;background-color:#0ef;border-radius:50%;pointer-events:none;animation:trailAnimation .5s ease-out forwards}@keyframes trailAnimation{from{transform:scale(1);opacity:1}to{transform:scale(0);opacity:0}}</style><div class=background-video-container><video autoplay id=background-video loop muted><source src=assets/vid.mp4 type=video/mp4></video></div><img alt=act class="animated fast rubberBand"id=userPhoto src=images/profile-picture.webp><h1 class="animated jello">act</h1><div class="animated delay-1s fadeInLeft"id=social-media-links><a class=social-icon href=https://steamcommunity.com/id/vvfk/ target=_blank><i class="fab fa-steam"></i> </a><a class=social-icon href=https://github.com/Act342 target=_blank><i class="fab fa-github"></i></a></div><a class=atrib>Built by Act 💸</a><audio autoplay id=background-audio loop muted><source src=assets/aud.mp3 type=audio/mp3>Your browser does not support the audio element.</audio><script>window.onload = function() {
             var audio = document.getElementById('background-audio');
             var video = document.getElementById('background-video');
             
@@ -111,8 +36,4 @@
             setTimeout(function() {
                 trail.remove();
             }, 500); // Match this duration with the CSS animation duration
-        });
-    </script>
-    <script src="script.js"></script>
-</body>
-</html>
+        });</script><script src=script.js></script>
