--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta content="f u c k a c t !" property="og:description" />
 <meta content="https://fuckact.lol" property="og:url" />
 <meta content="images/profile-picture.webp" property="og:image" />
-<meta content="#c90076" data-react-helmet="true" name="theme-color" />
+<meta content="#C90076" data-react-helmet="true" name="theme-color" />
             
 
 <link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css rel=stylesheet>
