--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 <div class="animated delay-1s fadeInLeft" id=social-media-links><a class=social-icon href=https://steamcommunity.com/id/vvfk/ target=_blank><i class="fab fa-steam"></i> </a><a class=social-icon href=https://github.com/Act342 target=_blank><i class="fab fa-github"></i></a></a>
     <a class="social-icon" href="https://www.roblox.com/users/5439464149/profile" target="_blank" title="Visit my Roblox Profile">
         <img src="images/roblox-icon.png" alt="Roblox" style="width: 24px; height: 24px;">
+    </a>
+<a class="social-icon" href="https://discord.gg/gKYnRAPMyV" target="_blank" title="Discord Server">
+        <img src="images/discord-icon.png" alt="Discord" style="width: 24px; height: 24px;">
     </a></div><a class=atrib>Built by Act 💸</a>
 <audio
     autoplay id=background-audio loop muted>
