--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </style>
 <div class=background-video-container><video autoplay id=background-video loop muted><source src=assets/vid.mp4 type=video/mp4></video></div><img alt=act class="animated fast rubberBand" id=userPhoto src=images/profile-picture.webp>
 <h1 class="animated jello">act</h1>
-<div class="animated delay-1s fadeInLeft" id=social-media-links><a class=social-icon href=https://steamcommunity.com/id/vvfk/ target=_blank><i class="fab fa-steam"></i> </a><a class=social-icon href=https://github.com/Act342 target=_blank><i class="fab fa-github"></i></a></a>
+<div class="animated delay-1s fadeInLeft" id=social-media-links><a class=social-icon href=https://steamcommunity.com/id/vvfk/ target=_blank><i class="fab fa-steam"></i> </a><a class=social-icon href=https://github.com/fuckact target=_blank><i class="fab fa-github"></i></a></a>
     <a class="social-icon" href="https://www.roblox.com/users/5439464149/profile" target="_blank" title="Visit my Roblox Profile">
         <img src="images/roblox-icon.png" alt="Roblox" style="width: 24px; height: 24px;">
     </a>
