--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <meta content="https://fuckact.lol" property="og:url" />
 <meta content="images/embed.png" property="og:image" />
 <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+            <head>
+    <link rel="shortcut icon" type="images/embed.png" href="favicon.ico" />
+  </head>
 
             
             
