--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </a></div><a class=atrib>Built by Act 💸</a>
 <audio
     autoplay id=background-audio loop muted>
-    <source src=assets/aud3.mp3 type=audio/mp3>Your browser does not support the audio element.</audio>
+    <source src=assets/aud.mp3 type=audio/mp3>Your browser does not support the audio element.</audio>
     <script>
         window.onload = function() {
             var audio = document.getElementById('background-audio');
