--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <meta charset=UTF-8>
 
 <title></title>
-<meta content="fuckact.lol" property="og:title" />
-<meta content="f u c k a c t !" property="og:description" />
-<meta content="https://fuckact.lol" property="og:url" />
-<meta content="images/embed.png" property="og:image" />
-<meta content="#43B581" data-react-helmet="true" name="theme-color" />
+<meta property="og:type" content="fuckact.lol">
+<meta property="og:url" content="https://fuckact.lol">
+<meta property="og:title" content="fuckact.lol | home">
+<meta property="og:description" content="site home">
+<meta property="og:image" content="images/embed.png">
             <head>
     <link rel="shortcut icon" type="images/embed.png" href="favicon.ico" />
   </head>
