--- a/projects/index.html
+++ b/projects/index.html
@@ -4,11 +4,11 @@
 <meta charset=UTF-8>
 
 <title></title>
-<meta content="projects" property="og:title" />
-<meta content="p r o j e c t s" property="og:description" />
-<meta content="https://fuckact.lol/projects" property="og:url" />
-<meta content="images/embed.png" property="og:image" />
-<meta content="#43B581" data-react-helmet="true" name="theme-color" />
+<meta property="og:type" content="fuckact.lol">
+<meta property="og:url" content="https://fuckact.lol">
+<meta property="og:title" content="fuckact.lol | projects">
+<meta property="og:description" content="view my projects">
+<meta property="og:image" content="images/embed.png">
 
 
             
