--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta property="og:description" content="site home">
 <meta property="og:image" content="images/embed.png">
             <head>
-    <link rel="shortcut icon" type="images/embed.png" href="favicon.ico" />
+    <link rel="shortcut icon" type="https://fuckact.lol/projects/images/embed.png" href="favicon.ico" />
   </head>
 
             
