--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@
 <meta property="og:url" content="https://fuckact.lol">
 <meta property="og:title" content="fuckact.lol | projects">
 <meta property="og:description" content="view my projects">
-<meta property="og:image" content="images/embed.png">
+<meta property="og:image" content="https://fuckact.lol/projects/images/embed.png">
 
 
             
