--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta property="og:url" content="https://fuckact.lol">
 <meta property="og:title" content="fuckact.lol | home">
 <meta property="og:description" content="site home">
-<meta property="og:image" content="images/embed.png">
+<meta property="og:image" content="https://fuckact.lol/projects/images/embed.png">
             <head>
     <link rel="shortcut icon" type="https://fuckact.lol/projects/images/embed.png" href="favicon.ico" />
   </head>
