--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,7 @@
 
 <title></title>
 <meta property="og:type" content="fuckact.lol">
-<meta property="og:url" content="https://fuckact.lol">
+<meta property="og:url" content="https://fuckact.lol/projects">
 <meta property="og:title" content="fuckact.lol | projects">
 <meta property="og:description" content="view my projects">
 <meta property="og:image" content="https://fuckact.lol/projects/images/embed.png">
