--- a/projects/index.html
+++ b/projects/index.html
@@ -104,7 +104,7 @@
         </video>
     </div>
 
-    <h1>coming soon</h1>
+    <h1>projects</h1>
 
     <div class="project-container">
         <div class="project-content">
