--- a/projects/index.html
+++ b/projects/index.html
@@ -104,18 +104,31 @@
 
     <h1>projects</h1>
 
-    <div class="project-container">
-        <div class="project-content">
-            <img src="images/rct.png" alt="Redstone County, Texas Logo">
-            <div class="project-text">
-                <p>Redstone County, Texas is a one-of-a-kind roleplay experience on Roblox, designed for players who want to immerse themselves in the life, challenges, and excitement of a Texas town where realism meets community. In Redstone County, every role you take on, from law enforcement to business owner or simply a local resident, adds depth to our shared story. We’re committed to fostering a welcoming, creative environment where players can enjoy character-driven stories, respond to dynamic situations, and develop deep connections in our carefully crafted game world. Whether you’re interested in small-town politics, building a business, or navigating complex relationships, Redstone County offers a place for everyone to live out their stories in a world rich with possibilities.</p>
-                <div class="project-buttons">
-                    <a href="https://www.roblox.com/games/86888136956916/Redstone-County-Texas" target="_blank">view the game</a>
-                    <a href="https://discord.gg/gKYnRAPMyV" target="_blank">join our discord</a>
-                </div>
+    <div class="project-container" style="flex-direction: column; gap: 40px;">
+    <div class="project-content">
+        <img src="images/site.png" alt="fuckact.lol">
+        <div class="project-text">
+            <p>fuckact.lol</p>
+            <div class="project-buttons">
+                <a href="https://fuckact.lol" target="_blank">view the site (you're on it)</a>
+                <a href="https://discord.gg/3uFbNubRc3" target="_blank">join the discord</a>
             </div>
         </div>
     </div>
+
+    <div class="project-content">
+        <img src="images/" alt="">
+        <div class="project-text">
+            <p>unnamed project</p>
+            <div class="project-buttons">
+                <a href="" target="_blank">nothing here yet !</a>
+                <a href="" target="_blank">sorry :(</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
     <!-- Audio Player -->
     <audio autoplay id="background-audio" loop muted>
