--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <a class="social-icon" href="https://www.roblox.com/users/5439464149/profile" target="_blank" title="Visit my Roblox Profile">
             <img src="images/roblox-icon.png" alt="Roblox" style="width: 24px; height: 24px;">
         </a>
-        <a class="social-icon" href="https://discord.gg/gKYnRAPMyV" target="_blank" title="Discord Server">
+        <a class="social-icon" href="https://discord.gg/3uFbNubRc3" target="_blank" title="Discord Server">
             <img src="images/discord-icon.png" alt="Discord" style="width: 24px; height: 24px;">
         </a>
     </div>
@@ -93,7 +93,7 @@
     </div>
 
     <audio autoplay id="background-audio" loop muted>
-        <source src="assets/aud.mp3" type="audio/mp3">
+        <source src="assets/aud4.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 
